tests/NormalTests/paczka1/fuzzy1/46663368.err
Error in line 1: T3y3eGil6ZG A823 53,5
Error in line 7: fuemau1p6W9 A823 49,1
Error in line 12: IXObaIQKw A823 24,2
Error in line 19: IXObaIQKw A233 29,4
Error in line 20: IXObaIQKw S574 79,1
Error in line 36: S469 A233 6,13
